<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
        <android.support.v7.widget.Toolbar android:id="@+id/toolbar_wallet_import_wif" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" android:background="?attr/colorPrimary" android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="12dp" android:background="@drawable/bg_card" android:orientation="vertical" android:padding="12dp">
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/private_key_import_title" android:textStyle="bold" />
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:text="@string/wif_short_explanation" android:textColor="?android:attr/textColorSecondary" android:textSize="12sp" />
            <Button android:id="@+id/wifInfoButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:minHeight="40dp" android:text="@string/what_is_wif" />
            <EditText android:id="@+id/privateKeyInput" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:hint="@string/private_key_hint" android:inputType="textNoSuggestions" android:maxLines="1" />
            <Button android:id="@+id/importPrivateKeyButton" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/import_private_key" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
